# OOP-Project-Angry-Birds

./: CLAUDE.md  CMakeLists.txt
.claude/: settings.local.json
cmake/: SFML.cmake
include/: AssetManager.h  AudioManager.h  Block.h  Board.h  BoostProjectile.h  Button.h  Camera.h  Constants.h  ContactListener.h  Controller.h  FloatingText.h  GameObject.h  IceBlock.h  NormalProjectile.h  ObjectFactory.h  Projectile.h  Slingshot.h  StoneBlock.h  Target.h  WoodBlock.h
resources/: CMakeLists.txt
resources/levels/: level1.txt  level2.txt
src/: AssetManager.cpp  AudioManager.cpp  Block.cpp  Board.cpp  BoostProjectile.cpp  Button.cpp  Camera.cpp  ContactListener.cpp  Controller.cpp  FloatingText.cpp  GameObject.cpp  IceBlock.cpp  NormalProjectile.cpp  ObjectFactory.cpp  Projectile.cpp  Slingshot.cpp  StoneBlock.cpp  Target.cpp  WoodBlock.cpp  main.cpp
